--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,14 @@
+* {
+  font-family: 'Bangers', cursive;
+}
+
 img {
   max-width: 200px;
   max-height: 200px;
+  
+}
+
+img:hover {
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
 }
